@@ -14,6 +14,7 @@ Change log 0.9 (under development)
 * Added javadoc to the release phase
 * The JUnit4 legacy runner now throws NoTestsRemainException if no tests are found in the test case. 
 * All JUnit4 runners now executes the setUp method before each test and the tearDown method after each test if the test class extends from TestCase.
+* Fixed an issue in the getAllChunkEntries method of the AbstractTestSuiteChunkerImpl class that caused test methods to be executed in a different order when running in a test suite than running the test stand alone.
 
 Change log 0.8.5 (2008-10-30)
 -----------------------------
